@@ -10,7 +10,7 @@ sas-jpg-quality=JPEG quality
 sas-alt-mode=Show Alt-mode
 sas-hide-clouds-and-fog=Hide clouds and fog
 sas-daytime=Daytime
-sas-anti-alias=Anti-alias
+sas-anti-alias=Anti-aliasing
 sas-autozoom-target-px=Auto-zoom target screenshot size (px)
 sas-autozoom-always-start=Always reset to "Auto" zoom
 
@@ -18,7 +18,7 @@ sas-autozoom-always-start=Always reset to "Auto" zoom
 sas-filetype=JPEG has smaller files, PNG is higher quality.
 sas-jpg-quality=The JPEG render quality as a percentage (from 0% to 100%). A lower value means a more compressed image. Doesn't do anything if you select PNG.
 sas-hide-clouds-and-fog=Hide cloud shadows on the ground, fog, and also foreground space dust. 
-sas-anti-alias=Render in double resolution and downscale the result. Makes things look less pixelated while keeping the resolution and filesize of the final screenshot the same. However the maximum resolution allowed is lowered to 8192x8192 instead of 16384x16384.
+sas-anti-alias=Render in double resolution and downscale the result. Makes things look less pixelated while keeping the resolution and filesize of the final screenshot the same, however some people report seeing scaling artefacts in some cases.\nNote: The maximum resolution with anti-aliasing is 8192x8192, screenshots bigger than this will be taken without anti-aliasing.
 sas-autozoom-target-px=Auto-zoom will try to get a screenshot as close as possible to this size.
 sas-autozoom-always-start=If checked, the zoom selection will always reset back to "Auto" when starting a new screenshot.\nIf unchecked, your zoom selection will be saved between screenshots.
 
@@ -44,5 +44,5 @@ sas-snipping-tool=[font=default-semibold][color=#ffe6c0]When in cursor:\n  •  
 
 [simple-area-screenshots]
 screenshot-taken=[img=sas_icon_white] Screenshot saved: [font=default-small-bold]<User data directory>/script-output/simple-area-screenshots/[color=#6fffff]__1__[/color][/font]
-screenshot-too-big=Screenshot was too big and was cut off! Max resolution is __1__x__1__.
-screenshot-too-big-anti-alias=(Disable anti-alias in mod settings to double this limit)
+screenshot-too-big=Screenshot was too big and was cut off! Max resolution allowed by Factorio is __1__x__1__.
+screenshot-too-big-anti-alias-disabled=Anti-aliasing was disabled for this screenshot, because it was above __1__x__1__.
